--- a/input/dune
+++ b/input/dune
@@ -1,3 +1,3 @@
 (executable
  (name input)
- (libraries cmdliner hex_encode lib stdio))
+ (libraries cmdliner hex_encode cmdliner_let_syntax stdio))
