--- a/dune
+++ b/dune
@@ -1,6 +1,6 @@
 (library
  (public_name aoc2015)
- (libraries angstrom cmdliner_let_syntax digestif ocamlgraph str yojson)
+ (libraries angstrom cmdliner digestif ocamlgraph str yojson)
  (flags :standard -open Base -open Stdio)
  (inline_tests)
  (preprocess
