--- a/dune
+++ b/dune
@@ -1,7 +1,18 @@
 (library
  (public_name aoc2015)
- (libraries angstrom digestif ocamlgraph str yojson)
+ (libraries angstrom cmdliner digestif ocamlgraph str yojson)
  (flags :standard -open Base -open Stdio)
  (inline_tests)
  (preprocess
   (pps ppx_jane)))
+
+(subdir
+ run
+ (dynamic_include ../generate/dune.inc))
+
+(subdir
+ generate
+ (rule
+  (with-stdout-to
+   dune.inc
+   (run ../gen/gen.exe 13))))
